--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
             href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap"
             rel="stylesheet"
         />
+        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
         <script
             src="https://kit.fontawesome.com/5d568d2bbd.js"
             crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="./styles/style.scss" />
-        <title>Aspec</title>
+        <title>Aspec GTRel</title>
     </head>
     <body>
         <div id="app">
